methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail: error: overloaded method value hunt with alternatives:
  ()Unit <and>
  ()Unit
 cannot be applied to (java.awt.Color)
		hunt(getParam(0).asInstanceOf[Color]); 
                ^SlugSnail:7: error: method hunt is defined twice
  conflicting symbols both originated in file 'plm.runtime25.SlugSnail'
def hunt() {while(!estSurBiscuit){if (isFacingTrail()){avance();baisseBrosse();leveBrosse()};else{droite()} };prendBiscuit()
    ^